# matriz-atributos

./: .env  EXITO_SCRAPING.md  GUIA_USO.md  README.md  README_SCRAPER.md  REQUISITOS_GEMINI.md  RESUMEN.md  configurar_gemini.py  extraccion-atributos.ipynb  extraccion_optimizada.ipynb  extraer_atributos.py  generar_productos_ejemplo.py  main.py  preparar_catalogo_coppel.py  productos.csv  productos_con_atributos.csv  productos_coppel.csv  productos_coppel_playwright.csv  productos_limpios.csv  prompt_api anterior.txt  prompt_api.txt  pyproject.toml  scraper_coppel.py  scraper_playwright.py  scraper_playwright_avanzado.py  timing.py  timing_report_10_samples.json  timing_report_20_samples.json  timing_report_5_samples.json
